syntax = "proto3";
package sysdept.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "pagin.proto";

option go_package = "hope/api/admin/sysdept/v1;v1";

// The SysDept service definition.
service SysDept {

  // 分页查询SysDept
  rpc GetPageSysDept (SysDeptPageReq) returns (SysDeptPageReply)  {
    option (google.api.http) = {
      get: "/v1/sysdept/page"
    };
  }

  // 获取SysDept
  rpc GetSysDept (SysDeptReq) returns (SysDeptReply)  {
    option (google.api.http) = {
      get: "/v1/sysdept/{id}"
    };
  }

  // 更新SysDept
  rpc UpdateSysDept (SysDeptUpdateReq) returns (SysDeptUpdateReply)  {
    option (google.api.http) = {
      put: "/v1/sysdept/{id}"
      body: "*"
    };
  }

  // 创建SysDept
  rpc CreateSysDept (SysDeptCreateReq) returns (SysDeptCreateReply)  {
    option (google.api.http) = {
      post: "/v1/sysdept"
      body: "*"
    };
  }

  // 删除SysDept
  rpc DeleteSysDept (SysDeptDeleteReq) returns (SysDeptDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/sysdept/{id}"
    };
  }

  // 批量删除SysDept
  rpc BatchDeleteSysDept (SysDeptBatchDeleteReq) returns (SysDeptDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/sysdept"
    };
  }

}

// 查询搜索请求
message SysDeptPageReq {
    //分页查询参数
    pagin.Pagination pagin = 1;
    //查询条件参数
    SysDeptReq param = 2;
}

// 查询搜索返回
message SysDeptPageReply {
    //分页参数
    pagin.Pagination pagin = 1;
    //查询条目
    repeated SysDeptReply items = 2;
}


// 查询搜索请求
message SysDeptReq {
    int64 id = 1;
    //部门路径
    string deptPath = 2;
    //部门名称
    string deptName = 3;
    //排序
    int32 sort = 4;
    //负责人
    string leader = 5;
    //手机
    string phone = 6;
    //邮箱
    string email = 7;
    //状态
    int32 status = 8;
    //创建时间
    google.protobuf.Timestamp createdAt = 9;
    //更新时间
    google.protobuf.Timestamp updatedAt = 10;
    //创建者
    int64 createBy = 11;
    //更新者
    int64 updateBy = 12;
    //租户
    int64 tenantId = 13;

}

// 查询搜索返回
message SysDeptReply {
    int64 id = 1;
    //部门路径
    string deptPath = 2;
    //部门名称
    string deptName = 3;
    //排序
    int32 sort = 4;
    //负责人
    string leader = 5;
    //手机
    string phone = 6;
    //邮箱
    string email = 7;
    //状态
    int32 status = 8;
    //创建时间
    google.protobuf.Timestamp createdAt = 9;
    //更新时间
    google.protobuf.Timestamp updatedAt = 10;
    //创建者
    int64 createBy = 11;
    //更新者
    int64 updateBy = 12;
    //租户
    int64 tenantId = 13;

}

// 创建SysDept请求
message SysDeptCreateReq {
    //部门路径
    string deptPath = 1;
    //部门名称
    string deptName = 2;
    //排序
    int32 sort = 3;
    //负责人
    string leader = 4;
    //手机
    string phone = 5;
    //邮箱
    string email = 6;
    //状态
    int32 status = 7;

}

// 创建SysDept返回
message SysDeptCreateReply {
    int64 id = 1;
    //部门路径
    string deptPath = 2;
    //部门名称
    string deptName = 3;
    //排序
    int32 sort = 4;
    //负责人
    string leader = 5;
    //手机
    string phone = 6;
    //邮箱
    string email = 7;
    //状态
    int32 status = 8;
    //创建时间
    google.protobuf.Timestamp createdAt = 9;
    //更新时间
    google.protobuf.Timestamp updatedAt = 10;
    //创建者
    int64 createBy = 11;
    //更新者
    int64 updateBy = 12;
    //租户
    int64 tenantId = 13;

}

// 更新SysDept请求
message SysDeptUpdateReq {
    int64 id = 1;
    //部门路径
    string deptPath = 2;
    //部门名称
    string deptName = 3;
    //排序
    int32 sort = 4;
    //负责人
    string leader = 5;
    //手机
    string phone = 6;
    //邮箱
    string email = 7;
    //状态
    int32 status = 8;

}


// 更新SysDept返回
message SysDeptUpdateReply {
    int64 id = 1;
    //部门路径
    string deptPath = 2;
    //部门名称
    string deptName = 3;
    //排序
    int32 sort = 4;
    //负责人
    string leader = 5;
    //手机
    string phone = 6;
    //邮箱
    string email = 7;
    //状态
    int32 status = 8;

}

// 删除SysDept请求
message SysDeptDeleteReq {
    int64 id = 1;
}


// 批量删除SysDept请求
message SysDeptBatchDeleteReq {
    repeated int64 ids = 1;
}


// 删除SysDept返回
message SysDeptDeleteReply {
    bool result = 1;
}

