syntax = "proto3";
package sysmenu.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/descriptor.proto";
import "pagin.proto";

option go_package = "hope/api/admin/sysmenu/v1;v1";

// The SysMenu service definition.
service SysMenu {

  // 分页查询SysMenu
  rpc GetPageSysMenu (SysMenuPageReq) returns (SysMenuPageReply)  {
    option (google.api.http) = {
      get: "/v1/sysmenu/page"
    };
  }

  // 获取SysMenu
  rpc GetSysMenu (SysMenuReq) returns (SysMenuReply)  {
    option (google.api.http) = {
      get: "/v1/sysmenu/{id}"
    };
  }

  // 更新SysMenu
  rpc UpdateSysMenu (SysMenuUpdateReq) returns (SysMenuUpdateReply)  {
    option (google.api.http) = {
      put: "/v1/sysmenu/{id}"
      body: "*"
    };
  }

  // 创建SysMenu
  rpc CreateSysMenu (SysMenuCreateReq) returns (SysMenuCreateReply)  {
    option (google.api.http) = {
      post: "/v1/sysmenu"
      body: "*"
    };
  }

  // 删除SysMenu
  rpc DeleteSysMenu (SysMenuDeleteReq) returns (SysMenuDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/sysmenu/{id}"
    };
  }

  // 批量删除SysMenu
  rpc BatchDeleteSysMenu (SysMenuBatchDeleteReq) returns (SysMenuDeleteReply)  {
    option (google.api.http) = {
      delete: "/v1/sysmenu"
    };
  }

}

// 查询搜索请求
message SysMenuPageReq {
    //分页查询参数
    pagin.Pagination pagin = 1;
    //查询条件参数
    SysMenuReq param = 2;
}

// 查询搜索返回
message SysMenuPageReply {
    //分页参数
    pagin.Pagination pagin = 1;
    //查询条目
    repeated SysMenuReply items = 2;
}


// 查询搜索请求
message SysMenuReq {
    int64 id = 1;
    //菜单名
    string menuName = 2;
    //菜单标题
    string title = 3;
    //图标
    string icon = 4;
    //路径
    string path = 5;
    //多级路径
    string paths = 6;
    //M-目录C-菜单F-按钮
    string menuType = 7;
    //
    string action = 8;
    //权限
    string permission = 9;
    //无缓存
    bool noCache = 10;
    //面包屑
    string breadcrumb = 11;
    //组件
    string component = 12;
    //排序
    int32 sort = 13;
    //是否可见
    bool visible = 14;
    //是否外链1是0否
    bool isFrame = 15;
    //
    string sysApi = 16;
    //创建时间
    google.protobuf.Timestamp createdAt = 17;
    //更新时间
    google.protobuf.Timestamp updatedAt = 18;
    //创建者
    int64 createBy = 19;
    //更新者
    int64 updateBy = 20;
    //租户
    int64 tenantId = 21;

}

// 查询搜索返回
message SysMenuReply {
    int64 id = 1;
    //菜单名
    string menuName = 2;
    //菜单标题
    string title = 3;
    //图标
    string icon = 4;
    //路径
    string path = 5;
    //多级路径
    string paths = 6;
    //M-目录C-菜单F-按钮
    string menuType = 7;
    //
    string action = 8;
    //权限
    string permission = 9;
    //无缓存
    bool noCache = 10;
    //面包屑
    string breadcrumb = 11;
    //组件
    string component = 12;
    //排序
    int32 sort = 13;
    //是否可见
    bool visible = 14;
    //是否外链1是0否
    bool isFrame = 15;
    //
    string sysApi = 16;
    //创建时间
    google.protobuf.Timestamp createdAt = 17;
    //更新时间
    google.protobuf.Timestamp updatedAt = 18;
    //创建者
    int64 createBy = 19;
    //更新者
    int64 updateBy = 20;
    //租户
    int64 tenantId = 21;

}

// 创建SysMenu请求
message SysMenuCreateReq {
    //菜单名
    string menuName = 1;
    //菜单标题
    string title = 2;
    //图标
    string icon = 3;
    //路径
    string path = 4;
    //多级路径
    string paths = 5;
    //M-目录C-菜单F-按钮
    string menuType = 6;
    //
    string action = 7;
    //权限
    string permission = 8;
    //无缓存
    bool noCache = 9;
    //面包屑
    string breadcrumb = 10;
    //组件
    string component = 11;
    //排序
    int32 sort = 12;
    //是否可见
    bool visible = 13;
    //是否外链1是0否
    bool isFrame = 14;
    //
    string sysApi = 15;

}

// 创建SysMenu返回
message SysMenuCreateReply {
    int64 id = 1;
    //菜单名
    string menuName = 2;
    //菜单标题
    string title = 3;
    //图标
    string icon = 4;
    //路径
    string path = 5;
    //多级路径
    string paths = 6;
    //M-目录C-菜单F-按钮
    string menuType = 7;
    //
    string action = 8;
    //权限
    string permission = 9;
    //无缓存
    bool noCache = 10;
    //面包屑
    string breadcrumb = 11;
    //组件
    string component = 12;
    //排序
    int32 sort = 13;
    //是否可见
    bool visible = 14;
    //是否外链1是0否
    bool isFrame = 15;
    //
    string sysApi = 16;
    //创建时间
    google.protobuf.Timestamp createdAt = 17;
    //更新时间
    google.protobuf.Timestamp updatedAt = 18;
    //创建者
    int64 createBy = 19;
    //更新者
    int64 updateBy = 20;
    //租户
    int64 tenantId = 21;

}

// 更新SysMenu请求
message SysMenuUpdateReq {
    int64 id = 1;
    //菜单名
    string menuName = 2;
    //菜单标题
    string title = 3;
    //图标
    string icon = 4;
    //路径
    string path = 5;
    //多级路径
    string paths = 6;
    //M-目录C-菜单F-按钮
    string menuType = 7;
    //
    string action = 8;
    //权限
    string permission = 9;
    //无缓存
    bool noCache = 10;
    //面包屑
    string breadcrumb = 11;
    //组件
    string component = 12;
    //排序
    int32 sort = 13;
    //是否可见
    bool visible = 14;
    //是否外链1是0否
    bool isFrame = 15;
    //
    string sysApi = 16;

}


// 更新SysMenu返回
message SysMenuUpdateReply {
    int64 id = 1;
    //菜单名
    string menuName = 2;
    //菜单标题
    string title = 3;
    //图标
    string icon = 4;
    //路径
    string path = 5;
    //多级路径
    string paths = 6;
    //M-目录C-菜单F-按钮
    string menuType = 7;
    //
    string action = 8;
    //权限
    string permission = 9;
    //无缓存
    bool noCache = 10;
    //面包屑
    string breadcrumb = 11;
    //组件
    string component = 12;
    //排序
    int32 sort = 13;
    //是否可见
    bool visible = 14;
    //是否外链1是0否
    bool isFrame = 15;
    //
    string sysApi = 16;

}

// 删除SysMenu请求
message SysMenuDeleteReq {
    int64 id = 1;
}


// 批量删除SysMenu请求
message SysMenuBatchDeleteReq {
    repeated int64 ids = 1;
}


// 删除SysMenu返回
message SysMenuDeleteReply {
    bool result = 1;
}

